--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -12,24 +12,32 @@
         }
     }
 
-    .arrow.icon md-icon {
-        width: 19px;
-        height: 19px;
+    .arrow.icon {
+        md-icon, svg {
+            width: 19px;
+            height: 19px;
+        }
     }
 
-    .dashboard.icon md-icon {
-        width: 20px;
-        height: 20px;
+    .dashboard.icon {
+        md-icon, svg {
+            width: 20px;
+            height: 20px;
+        }
     }
 
-    .settings.icon md-icon {
-        width: 21px;
-        height: 21px;
+    .settings.icon {
+        md-icon, svg {
+            width: 21px;
+            height: 21px;
+        }
     }
 
-    .uni.icon md-icon, .user.icon md-icon {
-        width: 22px;
-        height: 22px;
+    .uni.icon, .user.icon {
+        md-icon, svg {
+            width: 22px;
+            height: 22px;
+        }
     }
 }
 
@@ -91,7 +99,7 @@
         }
 
         .expendable {
-            md-icon {
+            md-icon, svg {
                 width: 19px;
                 height: 19px;
             }
@@ -108,21 +116,21 @@
         }
 
         .dashboard, .help, .logout {
-            md-icon {
+            md-icon, svg {
                 width: 20px;
                 height: 20px;
             }
         }
 
         .settings, .blog {
-            md-icon {
+            md-icon, svg {
                 width: 21px;
                 height: 21px;
             }
         }
 
         .uni, .user {
-            md-icon {
+            md-icon, svg {
                 width: 22px;
                 height: 22px;
             }
@@ -250,7 +258,7 @@
     }
 }
 
- .main-md-sidenav .menu-toggle-list {
+.main-md-sidenav .menu-toggle-list {
     background: #fff;
     max-height: 1300px;
     overflow: hidden;
