--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
@@ -625,6 +625,7 @@
                         background: @textColorWhite;
                         border: 1px solid #cbdbe3;
                         position: relative;
+                        min-height: 38px;
                     }
 
                     .menu {
@@ -686,7 +687,7 @@
                         position: absolute;
                         height: auto;
                         top: -16px;
-                        right: 15px;
+                        right: 8px;
                         -moz-transform: scaleX(1) /*rtl:scaleX(-1)*/;
                         -webkit-transform: scaleX(1) /*rtl:scaleX(-1)*/;
                         -o-transform: scaleX(1) /*rtl:scaleX(-1)*/;
