--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.css
@@ -681,6 +681,7 @@ Page Loading
   position: fixed;
   bottom: 0;
   z-index: 110;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
 .unreg-user .close-wrapper {
   position: relative;
@@ -689,6 +690,19 @@ Page Loading
   max-width: 700px;
   height: 20px;
   margin: 0 auto;
+}
+.unreg-user .close-wrapper:after {
+  content: '';
+  display: block;
+  width: 60px;
+  height: 60px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  padding: 18px;
+  border-radius: 50%;
+  position: absolute;
+  top: -30px;
+  right: 0;
+  z-index: -1;
 }
 .unreg-user .close-wrapper button.close {
   padding: 18px;
