--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
@@ -769,6 +769,7 @@ Page Loading
     position: fixed;
     bottom: 0;
     z-index: 110;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 
     .close-wrapper {
         position: relative;
@@ -777,6 +778,20 @@ Page Loading
         max-width: 700px;
         height: 20px;
         margin: 0 auto;
+
+        &:after {
+            content: '';
+            display: block;
+            width: 60px;
+            height: 60px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+            padding: 18px;
+            border-radius: 50%;
+            position: absolute;
+            top: -30px;
+            right: 0;
+            z-index: -1;
+        }
 
         button.close {
             padding: 18px;
