--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -125,8 +125,6 @@
 
     md-tabs-canvas, md-pagination-wrapper {
         height: 54px;
-        .displayFlex;
-        .align-items(center);
     }
 
     .tab-content {
@@ -152,7 +150,7 @@
 
         md-tab-item {
             padding: 0 10px;
-            margin: 0 10px;
+            margin: 5px 10px;
 
             .number {
                 font-size: 18px;
