--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -1039,6 +1039,10 @@ md-tooltip .md-content {
     }
 }
 
+md-toast .md-toast-content span {
+    text-align: center;
+}
+
 .nav-bar {
     background: @headerbackground;
     border-bottom: 5px solid @backgroundColor;
