--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
@@ -153,6 +153,7 @@
                     .displayFlex;
                     flex-direction: column;
                     .justifyContet(space-between);
+                    min-height: inherit;
 
                     .text-wrapper {
                         flex-grow: 1;
