--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
@@ -118,7 +118,7 @@
     .user-menu-item {
         height: inherit;
 
-        md-icon {
+        & > .md-button md-icon {
             width: 20px;
             height: 20px;
             margin: 8px 10px;
@@ -151,7 +151,6 @@
     //@media (max-width: 600px) {
     //    display: none;
     //}
-
 }
 
 .nav-bar {
