--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -322,9 +322,14 @@ md-menu-item {
         .item-meta {
             white-space: initial;
             text-align: left;
+            .displayFlex;
 
             a, span {
                 display: inline-block;
+                white-space: nowrap;
+            }
+            .date{
+                padding-right: 5px;
             }
         }
 
