--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
@@ -38,6 +38,10 @@
         background: @backgroundColor;
     }
 
+    .overflow-container{
+        overflow: hidden;
+    }
+
     .invite-list-wrapper {
         height: 290px;
         width: 100%;
