--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
@@ -193,7 +193,7 @@ md-menu-item > a.md-button {
 }
 .folders .add-folder .content {
   border: 1px solid #888b8e;
-  padding: 6px;
+  padding: 6px 12px;
   background: none;
   color: #212325;
 }
@@ -241,7 +241,6 @@ md-menu-item > a.md-button {
   background: none;
   border-width: 0 0 1px 0;
   border-color: #3D4348;
-  padding: 0 10px;
 }
 .page-head .need-follow {
   border-radius: 5px;
