--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -211,7 +211,7 @@ md-menu-item > a.md-button {
 
         .content {
             border: 1px solid @textColorGrey;
-            padding: 6px;
+            padding: 6px 12px;
             background: none;
             color: @textColorBlack;
 
@@ -265,7 +265,6 @@ md-menu-item > a.md-button {
     background: none;
     border-width: 0 0 1px 0;
     border-color: @borderColorGrey;
-    padding: 0 10px;
 }
 //dont think we need that
 
